...
        tableView.refreshControl = refreshControl
        refreshControl.addTarget(self, action: #selector(refreshNearbyPlaces), for: .valueChanged)
        
        navigationItem.rightBarButtonItem = UIBarButtonItem.filter(target: self, action: #selector(userTappedFilterButton))
        navigationItem.leftBarButtonItem = UIBarButtonItem.sorting(target: self, action: #selector(userTappedSortingButton))
        
        title = "Local Places"
    }
    
    private func setupConstraints() {
        view.addConstraints([
            tableView.centerYAnchor.constraint(equalTo: view.centerYAnchor),
            tableView.centerXAnchor.constraint(equalTo: view.centerXAnchor),
...
